--- a/site/index2_1.html
+++ b/site/index2_1.html
@@ -5,15 +5,15 @@
 	<title>
 		Kill4real Music
 	</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<style>
 	body { background: url(./img/bckgr.jpg);color:#FFFFE0; background-size: 100%;}
 	</style>
-	<hr align="center" width="65%">
 	<h1 style="position: relative;text-align: center; color: #000000; font-size: 60px; font-family: ALGERIAN;"> Kill4real Music</h1>
 	<h2 style="position: relative;text-align: center;">1_YouHaveToDoInTime</h2>
-	<p style="position:relative;text-align: center">Your life can't be foreseen, <br>
+	<p style="position:relative;text-align: center;font-family: segoe print">Your life can't be foreseen, <br>
 since you're behind the wheel. <br>
 However, lady inevitable <br>
 can break the thread again. <br>
@@ -21,7 +21,13 @@ You have to do in time <br>
 everything you need, <br>
 cause you don't know what will occur. <br>
 after all indeed.</p>
-<br><br><br><br><br><br><br><br><br><br>
-<a style="position: relative; left: 47%; color: #E6E6FA;font-size: 40px;" href="index2.html"> Back </a>
+<br><br><br><br><br>
+<a style="position: relative;left: 47%;" href="Index2.html" class="button">
+		<span class="button__line button__line--top"> </span>
+		<span class="button__line button__line--right"> </span>
+		<span class="button__line button__line--bottom"> </span>
+		<span class="button__line button__line--left"> </span>
+			Back
+		</a>
 </body>
 </html>
