--- a/site/index2_2.html
+++ b/site/index2_2.html
@@ -5,22 +5,28 @@
 	<title>
 		Kill4real Music
 	</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<style>
 	body { background: url(./img/bckgr.jpg);color:#FFFFE0; background-size: 100%;}
 	</style>
-	<hr align="center" width="65%">
 	<h1 style="position: relative;text-align: center; color: #000000; font-size: 60px; font-family: ALGERIAN;"> Kill4real Music</h1>
 	<h2 style="position: relative;text-align: center;">2_StopDuyingEveryDay</h2>
-	<p style="position:relative;text-align: center">Stop for aminute, remember, who you are.  <br>
+	<p style="position:relative;text-align: center;font-family: segoe print">Stop for aminute, remember, who you are.  <br>
 I see you are lost, your forget something important<br>
 Something that used to burn you to the ground<br>
 But you succumbed to these devils, their work is done.<br>
 Do not be afraid, you have answers that will shed light on evil spirits<br>
 Don't try to forget, otherwise you will get lost<br>
 Only weak people are weighed down by pain</p>
-<br><br><br><br><br><br><br><br><br><br>
-<a style="position: relative; left: 47%; color: #E6E6FA;font-size: 40px;" href="index2.html"> Back </a>
+<br><br><br><br><br><br><br>
+<a style="position: relative;left: 47%;" href="Index2.html" class="button">
+		<span class="button__line button__line--top"> </span>
+		<span class="button__line button__line--right"> </span>
+		<span class="button__line button__line--bottom"> </span>
+		<span class="button__line button__line--left"> </span>
+			Back
+		</a>
 </body>
 </html>
