--- a/site/index2_3.html
+++ b/site/index2_3.html
@@ -5,15 +5,15 @@
 	<title>
 		Kill4real Music
 	</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<style>
 	body { background: url(./img/bckgr.jpg);color:#FFFFE0; background-size: 100%;}
 	</style>
-	<hr align="center" width="65%">
 	<h1 style="position: relative;text-align: center; color: #000000; font-size: 60px; font-family: ALGERIAN;"> Kill4real Music</h1>
-	<h2 style="position: relative;text-align: center;">3_Beer</h2>
-	<p style="position:relative;text-align: center"> -Санёк, прикинь, крч, недавно усыпал<br> 
+	<h2 style="position: relative;text-align: center;">3_BeerDoesntF</h2>
+	<p style="position:relative;text-align: center;font-family: segoe print"> -Санёк, прикинь, крч, недавно усыпал<br> 
 	И знаешь что в голове было?<br>
 Хочется пива<br>
 -Нужно успать не с мыслью хочется пива,<br>
@@ -25,9 +25,14 @@ You have to start loving yourself<br>
 And leave the depression hole.<br>
 But if you drink beer with your friends,<br>
 Just to get hightm<br>
-Thats fine<br>
+Thats fine
 </p>
-<br><br><br><br>
-<a style="position: relative; left: 47%; color: #E6E6FA;font-size: 40px;" href="index2.html"> Back </a>
+<a style="position: relative;left: 47%;" href="Index2.html" class="button">
+		<span class="button__line button__line--top"> </span>
+		<span class="button__line button__line--right"> </span>
+		<span class="button__line button__line--bottom"> </span>
+		<span class="button__line button__line--left"> </span>
+			Back
+		</a>
 </body>
 </html>
