--- a/site/index2_4.html
+++ b/site/index2_4.html
@@ -5,18 +5,24 @@
 	<title>
 		Kill4real Music
 	</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<style>
 	body { background: url(./img/bckgr.jpg);color:#FFFFE0; background-size: 100%;}
 	</style>
-	<hr align="center" width="65%">
 	<h1 style="position: relative;text-align: center; color: #000000; font-size: 60px; font-family: ALGERIAN;"> Kill4real Music</h1>
-	<h2 style="position: relative;text-align: center;">4_Bratva</h2>
-	<p style="position:relative;font-family: Arial;text-align: center"> Пока не придумал<br> 
+	<h2 style="position: relative;text-align: center;">4_BratvaAndKentiSHots</h2>
+	<p style="position:relative;;font-family: segoe print;text-align: center"> Пока не придумал<br> 
 	В процессе))<br>
 </p>
 <br><br><br><br><br><br><br><br><br><br><br><br>
-<a style="position: relative; left: 47%; color: #E6E6FA;font-size: 40px;" href="index2.html"> Back </a>
+<a style="position: relative;left: 47%;" href="Index2.html" class="button">
+		<span class="button__line button__line--top"> </span>
+		<span class="button__line button__line--right"> </span>
+		<span class="button__line button__line--bottom"> </span>
+		<span class="button__line button__line--left"> </span>
+			Back
+		</a>
 </body>
 </html>
