--- a/site/index2_5.html
+++ b/site/index2_5.html
@@ -5,16 +5,22 @@
 	<title>
 		Kill4real Music
 	</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<style>
 	body { background: url(./img/bckgr.jpg);color:#FFFFE0; background-size: 100%;}
 	</style>
-	<hr align="center" width="65%">
 	<h1 style="position: relative;text-align: center; color: #000000; font-size: 60px; font-family: ALGERIAN;"> Kill4real Music</h1>
 	<h2 style="position: relative;text-align: center;">5_VOID</h2>
-	<img style="position: relative; width: 300px;height: 330px;left: 38.3%;" src="./img/void.jpg">
+	<img style="position: relative; width: 300px;height: 330px;left: 39%;" src="./img/void.jpg">
 <br><br>
-<a style="position: relative; left: 47%; color: #E6E6FA;font-size: 40px;" href="index2.html"> Back </a>
+<a style="position: relative;left: 47%;" href="Index2.html" class="button">
+		<span class="button__line button__line--top"> </span>
+		<span class="button__line button__line--right"> </span>
+		<span class="button__line button__line--bottom"> </span>
+		<span class="button__line button__line--left"> </span>
+			Back
+		</a>
 </body>
 </html>
